added the style score feature

--- a/frontend/templates/similarity.html
+++ b/frontend/templates/similarity.html
@@ -97,7 +97,7 @@
     <div id="results">
     {% for result in results_data.results %}
         <div class="result">
-            <a href="/similar_to?id={{result.image_id}}">
+            <a href="/similar_to/{{result.image_id}}">
                 <img src="{{result.image_url}}" width="160px" /><br />
                 <div class="caption">
                     {{ '{:.3f}'.format(result.distance) }}
