--- a/frontend/templates/similarity.html
+++ b/frontend/templates/similarity.html
@@ -6,7 +6,6 @@
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
 
-    <script src="/static/sprintf-0.7-beta1.js"></script>
     <script src="/static/jquery-1.10.2.min.js"></script>
 
     <script>
@@ -65,21 +64,33 @@
     <div class="query-image" style="display: inline-block; width: 520px;">
         <img src="{{image_info.image_url}}" alt="query image" width="500px" />
         <br />
-        <a href="{{image_info.page_url}}">source url</a>
+        <a href="{{image_info.page_url}}">image source</a>
     </div>
 
-    <div id="search-options" style="display: inline-block;">
-        <a href="/similar_to_random">[Random image]</a>
-        <br /><br />
-        {% for name, options in select_options.iteritems() %}
-        <label for="{{name}}">{{name}}</label>
-        <select id="{{name}}" class='query_arg'>
-            {% for x in options %}
+    <div id="search-options" style="display: inline-block; width:500px;">
+        <p>
+            <a href="/similar_to_random">[Go to a random image]</a>
+        </p>
+        <p>
+        {% for short_name, long_name_and_options in select_options.iteritems() %}
+        <label for="{{short_name}}">{{long_name_and_options.name}}</label>
+        <select id="{{short_name}}" class='query_arg'>
+            {% for x in long_name_and_options.options %}
             <option value="{{ x }}">{{ x }}</option>
             {% endfor %}
         </select>
         <br />
         {% endfor %}
+        </p>
+
+        <h3>Explanation</h3>
+        <p>
+            Select a style from the "filter by prediction" list to only consider positively classified images according to that style.
+        </p>
+        <p>
+            Click on any of the images below to search by that image.
+            The number under each result image is the distance (according to the selected metric) to the query image.
+        </p>
     </div>
 </div>
 
@@ -88,12 +99,14 @@
 <div id="images">
     <div class="results-nav">
         <h3>Matching images</h3>
+        <p>
         <span id="num-results">{{results_data.num_results}}</span> results
         (processed in {{'{:.3f}'.format(results_data.time_elapsed)}} s),
             <a href="#" id="prev-page">&larr;</a>
             page <span id="page">{{results_data.page}}</span>
             (starting at {{ results_data.start_ind }})
             <a href="#" id="next-page">&rarr;</a>
+        </p>
     <div id="results">
     {% for result in results_data.results %}
         <div class="result">
