finished renaming aphrodite

--- a/vislab/templates/images.html
+++ b/vislab/templates/images.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Aphrodite: Image analysis</title>
+    <title>VisLab: Image analysis</title>
 
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
@@ -18,7 +18,7 @@
 <div class="container">
 <h1>
     <a href="/"><i class="icon-home"></i></a>&nbsp;
-    Aphrodite: Image analysis
+    VisLab: Image analysis
 </h1>
 
 <img id="image" src="{{image_info.image_url}}" />
