--- a/vislab/templates/index.html
+++ b/vislab/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Aphrodite</title>
+    <title>VisLab</title>
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
 </head>
@@ -9,7 +9,7 @@
 <body>
 <div class="container" style="width: 960px">
     <div class="center">
-        <h1>Aphrodite</h1>
+        <h1>VisLab</h1>
     </div>
     <div class="grid">
         <div class="center unit one-of-three">
