--- a/vislab/templates/results.html
+++ b/vislab/templates/results.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Aphrodite: {{page_title}}</title>
+    <title>VisLab: {{page_title}}</title>
 
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
@@ -49,7 +49,7 @@
 <div class="container">
 <h1>
     <a href="/"><i class="icon-home"></i></a>&nbsp;
-    Aphrodite: {{page_title}}
+    VisLab: {{page_title}}
 </h1>
 
 <!-- {% if page_mode == 'results' %}
