--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,28 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title }}</title>
+    <title>{{ site.name }} | {{ page.title }}</title>
 
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="css/pygment_trac.css"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        {% include toc.md %}
-      </header>
-      <section>
-        {{ content }}
-      </section>
-      <footer>
-        <p>Originally developed by <a href="http://sergeykarayev.com">Sergey Karayev</a>.</p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+    {% if page.title != 'Home' %}
+    <header>
+      <a href="/"><i class="fa fa-th"></i> {{ site.name }}</a>
+    </header>
+    {% endif %}
+    <section>
+      {{ content }}
+    </section>
+    <footer>
+      <hr />
+      <p>Developed by <a href="http://sergeykarayev.com">Sergey Karayev</a>.</p>
+    </footer>
+    <script>
+    $(function() {
+      return $("h2, h3, h4").each(function(i, el) {
+        var id = $(el).attr('id');
+        if (id) {
+          return $(el).prepend($("<a />").attr("name", id).attr("href", "#" + id).html('#'));
+        }
+      });
+    });
+    </script>
   </body>
 </html>
