--- a/ui/templates/data.html
+++ b/ui/templates/data.html
@@ -47,6 +47,7 @@
         {% endfor %}
     </select>
     {% endfor %}
+    <label>{{ start_results }} to {{ end_results}} of {{ num_results }} results</label>
 </div>
 
 <div class="images">
