--- a/ui/templates/data.html
+++ b/ui/templates/data.html
@@ -11,30 +11,28 @@
     <!-- <script src="/static/jquery-2.1.0.min.js"></script> -->
     <script>
     $(document).ready(function() {
-        $('#dataset').change(function() {
-            window.location = '/data/' + $('#dataset').val() + '/' + $('#style').val() + '/' + $('#pins_per_user').val() + '/1';
-        });
-        $('#style').change(function() {
-            window.location = '/data/' + $('#dataset').val() + '/' + $('#style').val() + '/' + $('#pins_per_user').val() + '/1';
-        });
-        $('#pins_per_user').change(function() {
-            window.location = '/data/' + $('#dataset').val() + '/' + $('#style').val() + '/' + $('#pins_per_user').val() + '/' + $('#page').val();
-        });
-        $('#page').change(function() {
-            window.location = '/data/' + $('#dataset').val() + '/' + $('#style').val() + '/' + $('#pins_per_user').val() + '/' + $('#page').val();
-        });
+        var selection = function() {
+            var string = '';
+            {% for name, options, selected_value in select_options %}
+                string += '/' + $('#{{name}}').val();
+            {% endfor %}
+            window.location = '/{{page_type}}' + string;
+        };
+        {% for name, options, selected_value in select_options %}
+            $('#{{name}}').change(selection);
+        {% endfor %}
     });
     </script>
 </head>
 
 <body>
-<div class="container">
+<div class="container center">
 <h1>
     <a href="/"><i class="icon-home"></i></a>&nbsp;
     VisLab: Data
 </h1>
 
-<div id="search-options" style="display: block; text-align: center;">
+<div id="search-options" style="display: block;">
     {% for name, options, selected_value in select_options %}
     <label for="{{name}}">{{name}}</label>
     <select id="{{name}}">
@@ -47,7 +45,10 @@
         {% endfor %}
     </select>
     {% endfor %}
-    <label>{{start_results}} to {{end_results}} of {{num_results}} results</label>
+</div>
+
+<div>
+    {{start_results}} to {{end_results}} of {{num_results}} results
 </div>
 
 <div class="images">
@@ -56,11 +57,7 @@
         <a href="{{image.page_url}}">
             <img src="{{image.image_url}}" width="160px" />
         </a>
-<!--         <div style="text-align: center;">
-            <a href="{{image.board_url}}">{{image.board_name}}</a>
-            |
-            <a href="{{image.user_url}}">{{image.username}}</a>
-        </div> -->
+        <div>{{image.caption}}</div>
     </div>
 {% endfor %}
 </div>
