now loading settings from collection

--- a/ui/templates/data.html
+++ b/ui/templates/data.html
@@ -50,7 +50,8 @@
 </div>
 
 <div class="above-images">
-    {{start_results}} to {{end_results}} of {{num_results}} results
+    {{start_results}} to {{end_results}} of {{num_results}} results | {{"%.3f"|format(time_elapsed)}} s
+
 </div>
 
 <div class="images">
