--- a/ui/templates/image.html
+++ b/ui/templates/image.html
@@ -20,6 +20,7 @@
         <a href="{{page_url}}">
             <img src="{{image_url}}"/>
         </a>
+        <h2>Ground Truth Style: {{gt_style}}</h2>
     </div>
     <div class="unit one-of-two">
         <h2>Predictions</h2>
