basic similarity ui works again

--- a/vislab/ui/templates/similarity.html
+++ b/vislab/ui/templates/similarity.html
@@ -4,10 +4,9 @@
     <title>VisLab: Image Similarity</title>
 
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/static/font-awesome-4.0.3/css/font-awesome.min.css" />
 
     <script src="/static/jquery-1.10.2.min.js"></script>
-
     <script>
     $(document).ready(function() {
         page = {{args.page}};
