ui/app.py now shows wikipaintings data and results

--- a/vislab/ui/templates/index.html
+++ b/vislab/ui/templates/index.html
@@ -15,10 +15,12 @@
 
 <div class="grid">
     <div class="unit one-of-two">
-        <h2><a href="/data">Data Explorer</a></h2>
+        <h2><a href="/data/flickr">Flickr Data Explorer</a></h2>
+        <h2><a href="/results/flickr">Flickr Results Explorer</a></h2>
     </div>
     <div class="unit one-of-two">
-        <h2><a href="/results">Results Explorer</a></h2>
+        <h2><a href="/data/wikipaintings">Wikipaintings Data Explorer</a></h2>
+        <h2><a href="/results/wikipaintings">Wikipaintings Results Explorer</a></h2>
     </div>
 </div>
 
