another similarity method

--- a/vislab/ui/templates/similarity.html
+++ b/vislab/ui/templates/similarity.html
@@ -44,7 +44,7 @@
 
     <div id="search-options" style="display: inline-block; width:500px;">
         <p>
-            <a href="/similar_to_random">[Go to a random image]</a>
+            <a href="/similar_to/random/{{feature}}/{{distance}}">[Go to a random image]</a>
         </p>
         <p>
         {% for name, options, selected_value in select_options %}
